--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.7'
 services:
     node:
         build:
-            context: ./node
+            context: .
             dockerfile: Dockerfile
         ports:
             - "5000:5000"
