--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
             dockerfile: Dockerfile
         ports:
             - "5000:5000"
-        # env_file:
-            # - ./node/.env
+        env_file:
+            - .env
     nginx:
         restart: always
         build:
